Fail CI when CodeQL reports alerts and fix trufflehog error

--- a/.github/workflows/security-ci.yml
+++ b/.github/workflows/security-ci.yml
@@ -39,6 +39,29 @@ jobs:
         uses: github/codeql-action/autobuild@v3
       - name: Analyze
         uses: github/codeql-action/analyze@v3
+      - name: Fail on CodeQL alerts
+        run: |
+          set -euo pipefail
+          python - <<'PY'
+          import glob, json, sys
+
+          sarifs = glob.glob("codeql-results/**/*.sarif", recursive=True) + glob.glob("codeql-results/*.sarif")
+          if not sarifs:
+              sys.exit("No SARIF files produced by CodeQL.")
+
+          total = 0
+          for path in sarifs:
+              with open(path, "r", encoding="utf-8") as f:
+                  data = json.load(f)
+              for run in data.get("runs", []):
+                  total += len(run.get("results", []))
+
+          if total > 0:
+              print(f"CodeQL found {total} result(s); failing the job.")
+              sys.exit(1)
+
+          print("CodeQL found 0 results; continuing.")
+          PY
 
   sca-osv:
     name: SCA (OSV Scanner)
@@ -65,7 +88,7 @@ jobs:
             || true
       - name: Upload OSV SARIF
         if: always()
-        uses: github/codeql-action/upload-sarif@v3
+        uses: github/codeql-action/upload-sarif@v4
         with:
           sarif_file: osv-results.sarif
 
@@ -86,62 +109,72 @@ jobs:
         run: |
           set -euo pipefail
           python - <<'PY'
-          import json, os
+          import json, os, sys
 
           input_path = "trufflehog.json"
           output_path = "trufflehog.sarif"
           results = []
 
           def sarif_loc(path):
-            return {"uri": path, "uriBaseId": "%SRCROOT%"}
+              return {"uri": path, "uriBaseId": "%SRCROOT%"}
 
-            if os.path.exists(input_path):
-                with open(input_path, "r", encoding="utf-8", errors="ignore") as f:
-                    for line in f:
-                        line = line.strip()
-                        if not line:
-                            continue
-                        try:
-                            rec = json.loads(line)
-                        except Exception:
-                            continue
-                        detector = rec.get("DetectorName") or "trufflehog"
-                        fs_meta = rec.get("SourceMetadata", {}).get("Data", {}).get("Filesystem", {})
-                        file_path = fs_meta.get("file") or "UNKNOWN_PATH"
-                        verified = rec.get("Verified", False)
-                        raw = rec.get("Raw") or ""
-                        message = f"{detector} ({'verified' if verified else 'unverified'}): {raw}"
-                        results.append({
-                            "ruleId": detector,
-                            "level": "warning" if verified else "note",
-                            "message": {"text": message[:4000]},
-                            "locations": [{
-                                "physicalLocation": {
-                                    "artifactLocation": sarif_loc(file_path),
-                                    "region": {"startLine": 1}
-                                }
-                            }]
-                        })
+          if os.path.exists(input_path):
+              with open(input_path, "r", encoding="utf-8", errors="ignore") as f:
+                  for line in f:
+                      line = line.strip()
+                      if not line:
+                          continue
+                      try:
+                          rec = json.loads(line)
+                      except Exception:
+                          continue
+                      detector = rec.get("DetectorName") or "trufflehog"
+                      fs_meta = rec.get("SourceMetadata", {}).get("Data", {}).get("Filesystem", {})
+                      file_path = fs_meta.get("file") or "UNKNOWN_PATH"
+                      verified = rec.get("Verified", False)
+                      raw = rec.get("Raw") or ""
+                      message = f"{detector} ({'verified' if verified else 'unverified'}): {raw}"
+                      results.append({
+                          "ruleId": detector,
+                          "level": "warning" if verified else "note",
+                          "message": {"text": message[:4000]},
+                          "locations": [{
+                              "physicalLocation": {
+                                  "artifactLocation": sarif_loc(file_path),
+                                  "region": {"startLine": 1}
+                              }
+                          }]
+                      })
 
-            tool = {
-                "driver": {
-                    "name": "trufflehog",
-                    "informationUri": "https://github.com/trufflesecurity/trufflehog",
-                    "rules": [{"id": r["ruleId"]} for r in {r["ruleId"]: r for r in results}.values()],
-                }
-            }
+          tool = {
+              "driver": {
+                  "name": "trufflehog",
+                  "informationUri": "https://github.com/trufflesecurity/trufflehog",
+                  "rules": [{"id": r["ruleId"]} for r in {r["ruleId"]: r for r in results}.values()],
+              }
+          }
 
-            sarif = {
-                "version": "2.1.0",
-                "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
-                "runs": [{"tool": tool, "results": results}],
-            }
+          sarif = {
+              "version": "2.1.0",
+              "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
+              "runs": [{"tool": tool, "results": results}],
+          }
 
-            with open(output_path, "w", encoding="utf-8") as out:
-                json.dump(sarif, out, ensure_ascii=False, indent=2)
-            PY
+          with open(output_path, "w", encoding="utf-8") as out:
+              json.dump(sarif, out, ensure_ascii=False, indent=2)
+
+          if not os.path.exists(output_path):
+              # Ensure an empty SARIF exists so upload doesn't fail
+              empty = {
+                  "version": "2.1.0",
+                  "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
+                  "runs": [{"tool": tool, "results": []}],
+              }
+              with open(output_path, "w", encoding="utf-8") as out:
+                  json.dump(empty, out, ensure_ascii=False, indent=2)
+          PY
       - name: Upload TruffleHog SARIF
         if: always()
-        uses: github/codeql-action/upload-sarif@v3
+        uses: github/codeql-action/upload-sarif@v4
         with:
           sarif_file: trufflehog.sarif
